CHANGES
-------
Version 0.7 : In Progress
-------------------------
03/07/2017 Refined error reporting and warnings related to Task
           termination.  If any non-daemonic task is garbage collected
           and it hasn't been explicitly joined or cancelled, a
           warning message is logged.  This warning means that a task
           was launched, but that nobody ever looked at its result.
           If any unjoined task is garbage collected and it has
           crashed with an uncaught exception, that exception is
           logged as an error.

	   This change has a few impacts.  First, if a task crashes,
           but is joined, you won't get a spurious output message
           showing the crash.  The exception was delivered to someone
           else.   On the other hand, you might get more warning
           messages if you've been launching tasks without paying
           attention to their result. 

03/06/2017 A lot of cleanup of the kernel. Moved some functionality 
	   elsewhere. Removed unneeded traps.  Removed excess
           abstraction in the interest of readability.  The different
           trap functions in Curio are almost all quite small.
           However, details concerning their execution behavior was
           split across a few different places in the code and wrapped
           with decorators--making it somewhat hard to piece together
           how they worked looking at them in isolation.  Each trap 
	   is now basically self-contained.  You can look at the code and 
	   see exactly what it does.  Each trap is also afforded more
	   flexibility about how it could work in the future (e.g.,
	   scheduling behavior, cancellation, etc.).  

	   Debug logging features have been removed from the kernel and
	   placed into a new subsystem.  See the file curio/debug.py.
	   This is still in progress.

03/05/2017 Change to how the debugging monitor is invoked.  It's still